bpo-37417: Fix error handling in bytearray.extend. (GH-14407)

(cherry picked from commit 2a7d596f27b2342caf168a03c95ebf3b56e5dbbd)

Co-authored-by: Brandt Bucher <brandtbucher@gmail.com>